[package]
name = "smegcli"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Capps"]
description = "Fetch a random Red Dwarf frame and quote from The Smega-Drive into your terminal"
repository = "https://github.com/cappsyco/smegcli"
license = "MIT"

[dependencies]
colored = "3.0.0"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
viuer = { version = "0.9.1", features = ["print-file"] }
